--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.15.1",
