--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@google/generative-ai": "^0.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.15.1",
+    "@prisma/client": "^5.16.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.48.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jquery": "^3.7.1",
