--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "jquery": "^3.7.1",
+    "keyword-extractor": "^0.0.28",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
@@ -35,6 +37,7 @@
     "react-d3-cloud": "^1.0.6",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "string-similarity": "^4.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -44,6 +47,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/string-similarity": "^4.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
