--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@google/generative-ai": "^0.13.0",
     "@hookform/resolvers": "^3.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.16.0",
+    "@prisma/client": "^5.16.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -51,6 +51,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "prisma": "^5.16.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
